--- a/src/haama.css
+++ b/src/haama.css
@@ -40,8 +40,10 @@ html {
   padding: 0;
   font-family: Hana2;
   /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-  /* background-color: #008485; */
+  
   background-color: #161616;
+  /* background-color: #008485; */
+  /* background-color: #dddddd; */
 }
 
 pre,
@@ -126,13 +128,16 @@ h1#chat-title {
 }
 
 .user-message {
+  background-color: #008585c8;
+  /* background-color: #333; */
+  color:  #ffffff;
+}
 
-    background-color: rgb(87, 87, 87); 
-  }
-  
-  .assistant-message {
-    background-color: #333;
-    color: white;
+.assistant-message {
+  /* background-color: white; */
+  border-width: 10px;
+
+  background-color: rgb(87, 87, 87); 
 }
 
 .system-message {
